Fix comment